--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "~2.2.0",
+    "react-native-side-menu": "^1.1.3",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "^0.11.7"
   },
