--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^5.6.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "expo": "^37.0.7",
     "expo-updates": "~0.1.0",
