--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-navigation/drawer": "^5.6.3",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.2.3",
+    "@react-navigation/drawer": "^5.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "expo": "^37.0.7",
     "expo-updates": "~0.1.0",
@@ -19,6 +21,7 @@
     "react-native-material-kit": "^0.6.0-beta.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-router-flux": "^4.2.0",
+    "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-unimodules": "~0.9.0",
