--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/native": "^5.2.3",
     "@react-navigation/drawer": "^5.0.0",
+    "@react-navigation/native": "^5.2.3",
+    "axios": "^0.19.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "expo": "^37.0.7",
     "expo-updates": "~0.1.0",
