--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/drawer": "^5.0.0",
     "@react-navigation/native": "^5.2.3",
+    "@types/react": "^16.9.34",
+    "@types/react-native": "^0.62.7",
     "axios": "^0.19.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "expo": "^37.0.7",
@@ -32,6 +34,7 @@
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
+    "jetifier": "^1.6.5",
     "react-test-renderer": "~16.9.0"
   },
   "jest": {
