--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-unimodules": "~0.9.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7"
   },
   "devDependencies": {
