--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.2.3",
     "@types/react": "^16.9.34",
     "@types/react-native": "^0.62.7",
+    "@types/react-native-vector-icons": "^6.4.5",
     "axios": "^0.19.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "expo": "^37.0.7",
@@ -36,11 +37,23 @@
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
+    "jest-expo": "~25.1.0",
     "jetifier": "^1.6.5",
     "react-test-renderer": "~16.9.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|react-navigation-tabs|react-native-splash-screen|react-native-screens|react-native-reanimated|react-native-collapsible|react-native-vector-icons/(.*)|@expo/vector-icons|expo-font)/)"
+    ]
   },
   "private": true
 }
