--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-collapsible": "^1.5.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-material-kit": "^0.6.0-beta.1",
+    "react-native-qrcode-scanner": "^1.4.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "^0.7.3",
