--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rrr2",
+  "name": "rnt1",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,7 +11,26 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.0.0",
+    "@react-navigation/native": "^5.2.3",
+    "@types/react": "^16.9.34",
+    "@types/react-native": "^0.62.7",
+    "axios": "^0.19.2",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "react-dom": "~16.9.0",
+    "react-native-collapsible": "^1.5.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-material-kit": "^0.6.0-beta.1",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-router-flux": "^4.2.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-side-menu": "^1.1.3",
+    "react-native-unimodules": "~0.9.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "^0.11.7"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
