--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "~16.9.0",
     "react-native": "0.62.2",
     "react-native-collapsible": "^1.5.2",
+    "react-native-router-flux": "^4.2.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
